--- a/indexw.html
+++ b/indexw.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <div class="container">
+    <div class="search-container">
         <h1>Test Case Generator</h1>
-        <form action="/" method="post">
-            <label for="sentence">Enter Requirement Sentence:</label><br>
-            <input type="text" id="sentence" name="sentence" required><br><br>
+        <form action="/" method="post" class="search-form">
+            <input type="text" id="sentence" name="sentence" placeholder="Enter your test case requirement..." required>
             <input type="submit" value="Generate Test Cases">
         </form>
         {% if error %}
